--- a/p8105_hw2_tt3022.Rmd
+++ b/p8105_hw2_tt3022.Rmd
@@ -7,6 +7,7 @@ Load the necessary libraries
 ```{r}
 library(dplyr)
 library(readxl)
+library(stringr)
 ```
 
 Problem 1
@@ -175,6 +176,91 @@ Homes_Powered: The amount of energy (in terms of homes powered) from the collect
 In this dataset, Professor Trash Wheel collected a total of 246.74 tons of trash. Furthermore, Gwynnda Trash Wheel collected 18,120 cigarette butts in June 2022. These variables and measurements provide a detailed view of the efforts to reduce waste in the environment through these trash collection systems.
 
 Problem 3
+import data
+```{r}
+bakers_df = read.csv("D:/P8105/p8105_hw2_tt3022/Data/gbb_datasets/bakers.csv")
+bakes_df = read.csv("D:/P8105/p8105_hw2_tt3022/Data/gbb_datasets/bakes.csv")
+results_df = read.csv("D:/P8105/p8105_hw2_tt3022/Data/gbb_datasets/results.csv",skip = 2)
+viewers_df = read.csv("D:/P8105/p8105_hw2_tt3022/Data/gbb_datasets/viewers.csv")
+```
+cleaning data from name, and adding the first name in bakers_df
+```{r}
+bakers_df=janitor::clean_names(bakers_df)
+bakes_df = janitor::clean_names(bakes_df)
+results_df = janitor::clean_names(results_df)
+viewers_df =janitor::clean_names(viewers_df)
+bakers_df$baker <- word(bakers_df$baker_name, 1)
+
+
+```
+I realize that some bakers are join the show multiple time so we need merge result and bakes first by series, episode, then baker.
+
+Then order them by series, episode, baker.
+```{r}
+merged_bakes_results <- merge(results_df,bakes_df,
+                              by = c("series", "episode", "baker"), 
+                              all.x = TRUE)
+final_dataset <- merge(merged_bakes_results, bakers_df, 
+                       by = c("series","baker"), 
+                       all.x = TRUE)
+final_dataset <- final_dataset %>% 
+  select(series, episode, everything()) 
+final_dataset <- final_dataset %>% 
+  arrange(series, episode, baker)
+
+```
+
+export the data
+```{r}
+# Export the cleaned dataset as a CSV in the same directory as the original datasets
+write.csv(final_dataset, 
+          "D:/P8105/p8105_hw2_tt3022/Data/gbb_datasets/final_cleaned_data.csv", 
+          row.names = FALSE)
+```
+
+Filter for Seasons 5 through 10 and select only the rows where 'result' indicates 'Star Baker' or 'Winner'
+```{r}
+star_baker_table <- final_dataset %>%
+  filter(series >= 5 & series <= 10, result %in% c("STAR BAKER", "WINNER")) %>%
+  select(series, episode, baker, result) %>%
+  arrange(series, episode)
+
+```
+I find that the most winner has been star baker before. Some of them get star baker very frequently, but in series 10, I am surprises that David is the winner, because he did not become star baker before.
+
+To finished the viewer
+```{r}
+average_viewership_s1 <- viewers_df %>%
+  summarize(average_s1 = mean(series_1, na.rm = TRUE)) %>%
+  pull(average_s1)  
+
+
+average_viewership_s5 <- viewers_df %>%
+  summarize(average_s5 = mean(series_5, na.rm = TRUE)) %>%
+  pull(average_s5)  
+
+average_viewership_s1
+average_viewership_s5
+```
+
+We finally find that average viewership in Season 1 is 2.77 and in Season 5 is 10.0393.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
