change to github document

--- a/p8105_hw2_tt3022.md
+++ b/p8105_hw2_tt3022.md
@@ -1,25 +1,38 @@
----
-title: "p8105_hw2_tt3022"
-output: github_document
-date: "2024-10-02"
----
+p8105_hw2_tt3022
+================
+2024-10-02
+
 Load the necessary libraries
-```{r}
+
+``` r
 library(dplyr)
+```
+
+    ## 
+    ## 载入程序包：'dplyr'
+
+    ## The following objects are masked from 'package:stats':
+    ## 
+    ##     filter, lag
+
+    ## The following objects are masked from 'package:base':
+    ## 
+    ##     intersect, setdiff, setequal, union
+
+``` r
 library(readxl)
 library(stringr)
 ```
 
-Problem 1
-import data
-```{r}
-nyc_data <- read.csv("D:/P8105/p8105_hw2_tt3022/Data/NYC_Transit_Subway_Entrance_And_Exit_Data.csv")
+Problem 1 import data
 
+``` r
+nyc_data <- read.csv("D:/P8105/p8105_hw2_tt3022/Data/NYC_Transit_Subway_Entrance_And_Exit_Data.csv")
 ```
 
-
 Cleaning Data
-```{r}
+
+``` r
 # Select relevant columns
 nyc_cleaned <- nyc_data[, c("Line", "Station.Name", "Station.Latitude", "Station.Longitude",
                             "Route1", "Route2", "Route3", "Route4", "Route5", "Route6", "Route7", "Route8", 
@@ -29,8 +42,12 @@ nyc_cleaned <- nyc_data[, c("Line", "Station.Name", "Station.Latitude", "Station
 nyc_cleaned$Entry <- ifelse(nyc_cleaned$Entry == "YES", TRUE, FALSE)
 ```
 
-I need to make  sure that if one station has multiple corner, we need to make sure that "Entry", "Vending", "Entrance.Type", "ADA" has correct status, if one corner has "True" we can show this station is true, and entrance type show the most frequent entrance type
-```{r}
+I need to make sure that if one station has multiple corner, we need to
+make sure that “Entry”, “Vending”, “Entrance.Type”, “ADA” has correct
+status, if one corner has “True” we can show this station is true, and
+entrance type show the most frequent entrance type
+
+``` r
 get_mode <- function(x) {
   ux <- unique(x)
   ux[which.max(tabulate(match(x, ux)))]
@@ -51,36 +68,55 @@ nyc_grouped <- nyc_cleaned %>%
     Route7 = first(Route7), Route8 = first(Route8), Route9 = first(Route9),
     Route10 = first(Route10), Route11 = first(Route11)
   )
-
 ```
 
-Short Paragraph about the Dataset
-This dataset contains information about subway entrances and exits across various stations in New York City. The dataset consists of variables such as:
+    ## `summarise()` has grouped output by 'Station.Name'. You can override using the
+    ## `.groups` argument.
 
-Line: The subway line serving the station.
-Station Name: The name of the subway station.
-Station Latitude and Station Longitude: The geographical coordinates of the station.
-Route1 to Route11: Various subway routes serving each station.
-Entry: Whether the entrance allows entry, converted from "YES"/"NO" to logical TRUE/FALSE.
-Vending: Indicates whether a vending machine is available at the entrance.
-Entrance Type: Specifies the type of the entrance.
-ADA: Specifies whether the station is compliant with the Americans with Disabilities Act (ADA).
+Short Paragraph about the Dataset This dataset contains information
+about subway entrances and exits across various stations in New York
+City. The dataset consists of variables such as:
 
+Line: The subway line serving the station. Station Name: The name of the
+subway station. Station Latitude and Station Longitude: The geographical
+coordinates of the station. Route1 to Route11: Various subway routes
+serving each station. Entry: Whether the entrance allows entry,
+converted from “YES”/“NO” to logical TRUE/FALSE. Vending: Indicates
+whether a vending machine is available at the entrance. Entrance Type:
+Specifies the type of the entrance. ADA: Specifies whether the station
+is compliant with the Americans with Disabilities Act (ADA).
 
-After cleaning, the dataset contains only relevant columns and has had duplicate rows removed. The resulting dataset has [465 x 19] dimensions, indicating the number of unique station entrances. The data is tidy, since I defined the different cases about "Entry", "Vending", "Entrance.Type", "ADA".
-
+After cleaning, the dataset contains only relevant columns and has had
+duplicate rows removed. The resulting dataset has \[465 x 19\]
+dimensions, indicating the number of unique station entrances. The data
+is tidy, since I defined the different cases about “Entry”, “Vending”,
+“Entrance.Type”, “ADA”.
 
 Answer of the question:
-```{r}
+
+``` r
 distinct_stations <- nrow(unique(nyc_grouped[, c("Station.Name", "Line")]))
 distinct_stations
+```
+
+    ## [1] 465
+
+``` r
 ada_stations <- nyc_grouped[nyc_grouped$ADA == TRUE, ]
 nrow(ada_stations)
+```
+
+    ## [1] 84
+
+``` r
 no_vending_data <- nyc_grouped[nyc_grouped$Vending == FALSE, ]
 prop_entry_no_vending <- sum(no_vending_data$Entry) / nrow(no_vending_data)
 prop_entry_no_vending
+```
 
+    ## [1] 0.6666667
 
+``` r
 ## Filter the dataset for stations that serve the A train, ensuring we remove NA values
 a_train_stations <- nyc_grouped %>%
   filter((Route1 == "A" | Route2 == "A" | Route3 == "A" | Route4 == "A" | Route5 == "A" |
@@ -88,31 +124,44 @@ a_train_stations <- nyc_grouped %>%
           Route11 == "A") & !is.na(Station.Name) & !is.na(Line))
 distinct_a_stations <- nrow(unique(a_train_stations[, c("Station.Name", "Line")]))
 distinct_a_stations
+```
+
+    ## [1] 60
+
+``` r
 ada_a_train_stations <- nrow(a_train_stations[a_train_stations$ADA == TRUE, ])
 ada_a_train_stations
-
 ```
-Basic on  the code, we find that we have 465 distinct stations, 84 ADA stations, `r prop_entry_no_vending`  of station entrances / exits without vending allow entrance, 60 route A stations, and 17 stations has APA in route A.
 
+    ## [1] 17
 
+Basic on the code, we find that we have 465 distinct stations, 84 ADA
+stations, 0.6666667 of station entrances / exits without vending allow
+entrance, 60 route A stations, and 17 stations has APA in route A.
 
+Problem 2: loading dataset:
 
-Problem 2:
-loading dataset:
-```{r}
+``` r
 file_path <- "D:/P8105/p8105_hw2_tt3022/Data/202409 Trash Wheel Collection Data.xlsx"
 mr_trash_wheel <- read_excel(file_path, sheet = "Mr. Trash Wheel", skip = 1)
+```
+
+    ## New names:
+    ## • `` -> `...15`
+    ## • `` -> `...16`
+
+``` r
 prof_trash_wheel <- read_excel(file_path, sheet = "Professor Trash Wheel", skip = 1)
 gwynnda_trash_wheel <- read_excel(file_path, sheet = "Gwynnda Trash Wheel", skip = 1)
 ```
 
-
 Cleaning Dataset
 
-we rename the variable names, delete the row that do not include dumpster-specific data and round the number of sports balls to the nearest integer and converts the result to an integer variable 
+we rename the variable names, delete the row that do not include
+dumpster-specific data and round the number of sports balls to the
+nearest integer and converts the result to an integer variable
 
-
-```{r}
+``` r
 colnames(mr_trash_wheel) <- c("Dumpster", "Month", "Year", "Date", "Weight_Tons", 
                               "Volume_Cubic_Yards", "Plastic_Bottles", "Polystyrene", 
                               "Cigarette_Butts", "Glass_Bottles", "Plastic_Bags", 
@@ -143,13 +192,11 @@ gwynnda_trash_wheel <- gwynnda_trash_wheel[!is.na(gwynnda_trash_wheel$Dumpster) 
 gwynnda_trash_wheel$Trash_Wheel <- "Gwynnda Trash Wheel" # Adding identifier
 gwynnda_trash_wheel$Glass_Bottles <- NA
 gwynnda_trash_wheel$Sports_Balls <- NA
-
 ```
 
 Combining the three datasets into one
 
-```{r}
-
+``` r
 combined_trash_data <- rbind(mr_trash_wheel, prof_trash_wheel, gwynnda_trash_wheel)
 num_observations <- nrow(combined_trash_data)
 total_weight_prof_trash <- sum(combined_trash_data$Weight_Tons[combined_trash_data$Trash_Wheel == "Professor Trash Wheel"], na.rm = TRUE)
@@ -161,42 +208,64 @@ total_cigarette_butts_gwynnda <- sum(combined_trash_data$Cigarette_Butts[combine
 
 # Displaying the calculated results
 num_observations
+```
+
+    ## [1] 1033
+
+``` r
 total_weight_prof_trash
+```
+
+    ## [1] 246.74
+
+``` r
 total_cigarette_butts_gwynnda
 ```
-The combined dataset consists of 1,033 observations from three sources: Mr. Trash Wheel, Professor Trash Wheel, and Gwynnda Trash Wheel. 
-key variables:
+
+    ## [1] 18120
+
+The combined dataset consists of 1,033 observations from three sources:
+Mr. Trash Wheel, Professor Trash Wheel, and Gwynnda Trash Wheel. key
+variables:
 
 Weight_Tons: The total weight of trash collected in tons.
 Cigarette_Butts: The number of cigarette butts collected.
-Plastic_Bottles, Polystyrene, Plastic_Bags, Wrappers, and Sports_Balls: Various types of waste materials.
-Glass_Bottles: Recorded for Mr. Trash Wheel and Professor Trash Wheel but not for Gwynnda.
-Homes_Powered: The amount of energy (in terms of homes powered) from the collected waste.
+Plastic_Bottles, Polystyrene, Plastic_Bags, Wrappers, and Sports_Balls:
+Various types of waste materials. Glass_Bottles: Recorded for Mr. Trash
+Wheel and Professor Trash Wheel but not for Gwynnda. Homes_Powered: The
+amount of energy (in terms of homes powered) from the collected waste.
 
-In this dataset, Professor Trash Wheel collected a total of 246.74 tons of trash. Furthermore, Gwynnda Trash Wheel collected 18,120 cigarette butts in June 2022. These variables and measurements provide a detailed view of the efforts to reduce waste in the environment through these trash collection systems.
+In this dataset, Professor Trash Wheel collected a total of 246.74 tons
+of trash. Furthermore, Gwynnda Trash Wheel collected 18,120 cigarette
+butts in June 2022. These variables and measurements provide a detailed
+view of the efforts to reduce waste in the environment through these
+trash collection systems.
 
-Problem 3
-import data
-```{r}
+Problem 3 import data
+
+``` r
 bakers_df = read.csv("D:/P8105/p8105_hw2_tt3022/Data/gbb_datasets/bakers.csv")
 bakes_df = read.csv("D:/P8105/p8105_hw2_tt3022/Data/gbb_datasets/bakes.csv")
 results_df = read.csv("D:/P8105/p8105_hw2_tt3022/Data/gbb_datasets/results.csv",skip = 2)
 viewers_df = read.csv("D:/P8105/p8105_hw2_tt3022/Data/gbb_datasets/viewers.csv")
 ```
+
 cleaning data from name, and adding the first name in bakers_df
-```{r}
+
+``` r
 bakers_df=janitor::clean_names(bakers_df)
 bakes_df = janitor::clean_names(bakes_df)
 results_df = janitor::clean_names(results_df)
 viewers_df =janitor::clean_names(viewers_df)
 bakers_df$baker <- word(bakers_df$baker_name, 1)
-
-
 ```
-I realize that some bakers are join the show multiple time so we need merge result and bakes first by series, episode, then baker.
+
+I realize that some bakers are join the show multiple time so we need
+merge result and bakes first by series, episode, then baker.
 
 Then order them by series, episode, baker.
-```{r}
+
+``` r
 merged_bakes_results <- merge(results_df,bakes_df,
                               by = c("series", "episode", "baker"), 
                               all.x = TRUE)
@@ -207,29 +276,34 @@ final_dataset <- final_dataset %>%
   select(series, episode, everything()) 
 final_dataset <- final_dataset %>% 
   arrange(series, episode, baker)
-
 ```
 
 export the data
-```{r}
+
+``` r
 # Export the cleaned dataset as a CSV in the same directory as the original datasets
 write.csv(final_dataset, 
           "D:/P8105/p8105_hw2_tt3022/Data/gbb_datasets/final_cleaned_data.csv", 
           row.names = FALSE)
 ```
 
-Filter for Seasons 5 through 10 and select only the rows where 'result' indicates 'Star Baker' or 'Winner'
-```{r}
+Filter for Seasons 5 through 10 and select only the rows where ‘result’
+indicates ‘Star Baker’ or ‘Winner’
+
+``` r
 star_baker_table <- final_dataset %>%
   filter(series >= 5 & series <= 10, result %in% c("STAR BAKER", "WINNER")) %>%
   select(series, episode, baker, result) %>%
   arrange(series, episode)
-
 ```
-I find that the most winner has been star baker before. Some of them get star baker very frequently, but in series 10, I am surprises that David is the winner, because he did not become star baker before.
+
+I find that the most winner has been star baker before. Some of them get
+star baker very frequently, but in series 10, I am surprises that David
+is the winner, because he did not become star baker before.
 
 To finished the viewer
-```{r}
+
+``` r
 average_viewership_s1 <- viewers_df %>%
   summarize(average_s1 = mean(series_1, na.rm = TRUE)) %>%
   pull(average_s1)  
@@ -240,41 +314,15 @@ average_viewership_s5 <- viewers_df %>%
   pull(average_s5)  
 
 average_viewership_s1
+```
+
+    ## [1] 2.77
+
+``` r
 average_viewership_s5
 ```
 
-We finally find that average viewership in Season 1 is 2.77 and in Season 5 is 10.0393.
+    ## [1] 10.0393
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+We finally find that average viewership in Season 1 is 2.77 and in
+Season 5 is 10.0393.
